--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css">
     <title>Vue</title>
+    <style>
+     .box-container{
+          background-color: burlywood;
+          height: 50px;
+          width: 50px;
+     }
+     .box-container2{
+          background-color: gray;
+          height: 50px;
+          width: 50px;
+     }
+    </style>
   </head>
   <body>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <div id="app">{{ message }}</div>
+    <div id="app">
+{{ greeting }}
+<input v-model="greeting" type="text" />
+<div v-if="isVisible" class="box-container"> </div>
+<!-- mostly used in Loaders -->
+<br/>
+<div v-show="isVisible" class="box-container2"> </div>
+<!-- To add/remove from DOM  ex. Toggle -->
+</div>
+
+    </div>
 
     <script>
      //  const { createApp } = Vue;
@@ -18,7 +40,8 @@
       Vue.createApp({
         data() {
           return {
-            message: "Hello !",
+            greeting: "Hello !",
+            isVisible: false,
           };
         },
       }).mount("#app");
