--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
      <link rel="stylesheet" href="./styles.css">
      <title>Vue</title>
      <style>
-          .box-container {
-               background-color: burlywood;
+          .box {
+               background-color: blue;
                height: 50px;
                width: 50px;
           }
 
-          .box-container2 {
-               background-color: gray;
-               height: 50px;
-               width: 50px;
+          .box.two {
+               background-color: green;
+          }
+          .box.three{
+               background-color: red;
           }
      </style>
 </head>
@@ -28,11 +29,9 @@
      <div id="app">
           {{ greeting }}
           <input v-model="greeting" type="text" />
-          <div v-if="isVisible" class="box-container"> </div>
-          <!-- mostly used in Loaders -->
-          <br />
-          <div v-show="isVisible" class="box-container2"> </div>
-          <!-- To add/remove from DOM  ex. Toggle -->
+          <div v-if="isVisible" class="box"> </div>
+          <div v-else-if="isVisible2" class="box two"></div>
+          <div v-else class="box three"></div>
      </div>
 
      </div>
@@ -45,6 +44,7 @@
                     return {
                          greeting: "Hello !",
                          isVisible: false,
+                         isVisible2:true,
                     };
                },
           }).mount("#app");
