--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
      <div id="app" v-cloak>
           {{ greeting }}
-          <input v-model="greeting" type="text" />
+          <input @keyup.enter="greet" v-model="greeting" type="text" />
           <div v-if="isVisible" class="box"> </div>
           <div v-else-if="isVisible2" class="box two"></div>
           <div v-else class="box three"></div>
@@ -56,6 +56,9 @@
                methods:{
                     toggleBox(){
                          this.isVisible2=!this.isVisible2
+                    },
+                    greet(){
+                         alert("input event in vue js using @keyup.enter");
                     }
                }
           }).mount("#app");
