--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
                padding: 5px;
                display: block;
           }
+
+          .main-container,
+          .container-lifecycle-methods,
+          .login-form {
+               display: flex;
+               align-items: center;
+               justify-content: center;
+               flex-direction: column;
+               background-color: antiquewhite;
+               padding: 1rem;
+          }
      </style>
 </head>
 
@@ -38,18 +49,22 @@
      <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
      <div id="app" v-cloak>
-          {{ greeting }}
-          <input @keyup.enter="greet" v-model="greeting" type="text" />
-          <div v-if="isVisible" class="box"> </div>
-          <div v-else-if="isVisible2" class="box two"></div>
-          <div v-else class="box three"></div>
-          <button v-on:click="isVisible=true">Change Color</button>
-          <button @click="isVisible=!isVisible">Toggle Color</button>
-          <button @click="toggleBox">Red Color Toggle</button>
-          <login-form />
+          <div class="main-container">
+               {{ greeting }}
+               <input @keyup.enter="greet" v-model="greeting" type="text" />
+               <div v-if="isVisible" class="box"> </div>
+               <div v-else-if="isVisible2" class="box two"></div>
+               <div v-else class="box three"></div>
+               <button v-on:click="isVisible=true">Change Color</button>
+               <button @click="isVisible=!isVisible">Toggle Color</button>
+               <button @click="toggleBox">Red Color Toggle</button>
+          </div>
+          <div class="container-lifecycle-methods">
+               <h3>{{message}}</h3>
+          </div>
+          <login-form class="login-form" />
      </div>
 
-     </div>
 
      <script>
           //  const { createApp } = Vue;
@@ -60,6 +75,7 @@
                          greeting: "Hello !",
                          isVisible: false,
                          isVisible2: true,
+                         message: "Component lifecycle methods"
                     };
                },
                methods: {
@@ -75,7 +91,7 @@
           app.component('login-form', {
                template: `
                <form @submit.prevent="handleSubmit">
-                    <h2>{{title}}</h2>
+                    <h3>{{title}}</h3>
                     <p v-for="(sub,index) in academicSubs" :key="sub" >{{index + sub}}</p>
                     <login-input 
                     v-for="(inp, i) in inputArr"
@@ -140,6 +156,7 @@
                     }
                }
           })
+
           app.mount("#app");
      </script>
 </body>
